3.4
	+ Updated EBox::Samba::Users::setCredentials to stop using the lazy flag
	  and added a note about why it cannot be used in the method documentation
	+ Write openchange options to use mysql as backend
	+ Use new addModuleToPostSave Global interface in Provision class
	+ Depend on new samba packaging instead of old samba4 one
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Fix NT_STATUS_ACCESS_DENIED opening files quering the DOS attributes
	  and passing them to open function
	+ Set OpenChange as not provisioned when Samba is reprovisioned
	+ Added a way to check whether we are managing the AD schema or not
	+ Samba provision failures when IPs are not set no longer talk
	  wrongly about internal interfaces
	+ Create directories in _setConf to avoid invalid group __USERS__ error
	+ Clean up openchange section in stub smb.conf file
	+ Fixed bug in EBox::LDB::users which made the method to not
	  return users inside Organization Units
	+ Fix typo in SambaLdapUser that fixes error in change email
	+ Change user modification hook from _modifyUser to _preModifyUser
	+ Throw DataExists exception if the user try to rename a user on a
	  container and already exists
	+ Check for duplicated DN on user creation and show a proper error, not
	  an internal exception.
	+ Fixed s4sync's breakage when tries to sync serviceprincipals to
	  OpenLDAP. Those users are ignored on EBox::LDB::users method
	+ Remove group share on group deletion
	+ Set the setShareRightsReset flag on SambaSharesPermissions row deletion
	+ Samba log helper is now aware of utf8
	+ EBox::Samba::LdbObject::deleteObject - Delete all childs before self
	  deletion
	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
	  defer it until s4sync does the synchronization
	+ Typo fix in netbios validation
	+ Check if objects are system critical before deletion
3.3
	+ Renamed printableName to File Sharing and Domain Services